--- a/TODO
+++ b/TODO
@@ -9,5 +9,6 @@ TODO
   streaming.
 * Image#to_a
 * look into other.h, audit all libvips methods and make sure they are all implemented
-* More API cleanups -- especially methods that take more than 5 named args.
 * JRuby support
+* Don't entirely #ifdef out any ruby methods, even when not supported by the
+  library version. Instead #ifdef in a ruby exception.
