first try and sort-of works
try:

----------

require 'rubygems'
require 'vips'

include VIPS

data = IO.read('/home/john/pics/shark.jpg')

reader = JPEGReader.new(data, :shrink_factor => 2, :fail_on_warn =>
true)

im = reader.read_buffer

im.write('out.png')
----------

--- a/TODO
+++ b/TODO
@@ -1,3 +1,13 @@
+btw, there's a method called to_memory in JPEGWriter and PNGWriter, that works
+cool to retrieve the VIPS::Image as a memory buffer, will be cool if this
+method is moved up to Writer and then it handles the correct to_memory method
+using the image headers.
+
+add from_memory? or should the open method accept a blob in place of a path?
+
+
+
+
 TODO
 * Verify that all memory gets released when vips ops return errors. Namely,
   make sure that the allocated IMAGEs get released via ruby's free callbacks.
