--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+
+- support vips_flatten(), see 
+
+	https://github.com/jcupitt/ruby-vips/issues/45
+
+
 btw, there's a method called to_memory in JPEGWriter and PNGWriter, that works
 cool to retrieve the VIPS::Image as a memory buffer, will be cool if this
 method is moved up to Writer and then it handles the correct to_memory method
