--- a/TODO
+++ b/TODO
@@ -1,5 +1,21 @@
 # Notes
 
+- travis needs fixing, we have this is 0.3
+
+	rvm:
+	  - 1.9.3
+	  - 2.0
+	  - 2.1
+	script: "rake"
+	gemfile:
+	  - Gemfile
+	before_install:
+	  - uname -a
+	  - sudo apt-get update
+	  - sudo apt-get install libvips-dev
+	before_script:
+	  - ./compile
+
 - need something like the old ruby-vips occasional GC stuff, we can fill 
   memory before a GC is triggered
 
